# gfs-backup-pruner

./: .gitignore  README.md  gfs_backup_pruner.py  pyproject.toml
tests/: test_rotator.py
